fix: low contrast

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ footer {
 }
 
 footer a {
-    color: #ffcb05;
+    color: white;
     text-decoration: none;
 }
 
